# qt-opengl

./: CMakeLists.txt  MainWindow.cpp  OpenGLWidget.cpp  OpenGLWidget.h  build_vs2017win32.bat
